--- a/main.css
+++ b/main.css
@@ -57,3 +57,8 @@ margin-bottom: 30px;
     font-size:24px;
     margin-bottom:30px;
 }
+
+.container{
+    display:flex;
+    flex-direction:row;
+}
